--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -88,17 +88,25 @@
         padding: 20px;
         margin-block-end: 2px;
 
-        svg {
+        .play-btn-container {
+            display: flex;
             justify-content: center;
             align-items: center;
-            width: 65px;
-            height: 65px;
-            color: $clr1;
+            width: 56px;
+            height: 56px;
+            border-radius: 50%;
+            background-color: $clr1;
+
+            .play-btn {
+                height: 24px;
+                width: 24px;
+                color: black;
+            }
 
             &:hover {
                 transform: scale(1.03);
                 cursor: pointer;
-                color: $clr7;
+                background-color: $clr7;
             }
         }
 
@@ -195,9 +203,106 @@
             cursor: pointer;
             position: relative;
 
+            .hover-play-btn {
+                opacity: 0;
+                width: 16px;
+                height: 24px;
+                position: absolute;
+            }
+
+            .hover-pause-btn {
+                opacity: 0;
+                width: 16px;
+                height: 24px;
+                position: absolute;
+                left: 15px;
+            }
+
+            .song-index {
+                min-width: 16px;
+                color: $clr5;
+                padding-inline-start: 2px;
+                margin-inline-end: 1rem;
+            }
+
+            .song-index-active {
+                color: $clr1;
+            }
+
+            .song-index-off {
+                opacity: 0;
+            }
+
             &:hover {
                 background-color: #2a2a2a;
             }
+
+            &:hover .hover-play-btn {
+                opacity: 1;
+            }
+
+            &:hover .hover-pause-btn {
+                opacity: 1;
+            }
+
+            &:hover .song-index {
+                opacity: 0;
+            }
+
+            &:hover .playing-bars {
+                opacity: 0;
+            }
+
+            .playing-bars {
+                position: absolute;
+                display: flex;
+                align-items: end;
+                height: 14px;
+                gap: 2px;
+                
+            }
+
+            .playing-bars span {
+                width: 2px;
+                background-color: #1DB954;
+                display: inline-block;
+                animation: bounce 1s infinite ease-in-out;
+                transform-origin: bottom;
+            }
+
+            /* Randomized animation delays and durations for fake "random" motion */
+            .playing-bars span:nth-child(1) {
+                animation-delay: 0s;
+                animation-duration: 0.8s;
+            }
+
+            .playing-bars span:nth-child(2) {
+                animation-delay: 0.2s;
+                animation-duration: 1.1s;
+            }
+
+            .playing-bars span:nth-child(3) {
+                animation-delay: 0.4s;
+                animation-duration: 0.9s;
+            }
+
+            .playing-bars span:nth-child(4) {
+                animation-delay: 0.1s;
+                animation-duration: 1.3s;
+            }
+
+            @keyframes bounce {
+
+                0%,
+                100% {
+                    height: 4px;
+                }
+
+                50% {
+                    height: 16px;
+                }
+            }
+
 
             >* {
                 margin-bottom: 0;
@@ -207,12 +312,7 @@
                 text-overflow: ellipsis;
             }
 
-            .song-index {
-                min-width: 16px;
-                color: $clr5;
-                padding-inline-start: 2px;
-                margin-inline-end: 1rem;
-            }
+
 
             .info-wrapper {
                 display: flex;
@@ -246,6 +346,10 @@
                         font-size: rem(16px);
                         color: $clr6;
                         margin: 0;
+                    }
+
+                    .song-title-active {
+                        color: $clr1;
                     }
 
                     .song-artist {
